docs/css/main.css
/* ... */
.gallery-item__close-button {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 0;
    text-decoration: none;
    transition: all 0.2s ease;
}

.gallery-item__close-button:hover {
    gap: 3rem;
}

.gallery-item__close-button .close-label {
    display: block;
    font-size: 2.7rem;
    text-transform: lowercase;
    opacity: 0;
    transition: opacity 0.2s ease;
    width: 10rem;
}

.gallery-item__close-button .close-label.es {
    text-align: right;
}

.gallery-item__close-button:hover .close-label {
    opacity: 1;
}

.gallery-item__close-button .close-icon {
    display: block;
    font-size: 5.4rem;
    color: var(--text-color-primary);
    transition: transform 0.2s ease;
}

.gallery-item__close-button:hover .close-icon {
    transform: scale(1.2) rotate(180deg) translateY(-0.5rem);
}

.gallery-item__content {
    position: relative;
    min-height: 13rem;
    max-width: var(--max-content-width);
    padding-bottom: 2rem;
    border-bottom: 0.2rem solid var(--border-color);
}

.gallery-item__content * {
    font-size: 2rem;
    text-shadow: 0 0 0.2rem var(--backdrop-color);
}

.gallery-item__content img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
    height: auto;
    object-fit: contain;
    box-shadow: 0 0 27px var(--backdrop-color);
}

.gallery-item__footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 2rem 0 0;
    height: 8rem;
}

.gallery-item__footer .gallery-item__footer-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 1rem;
    height: 100%;
    text-decoration: none;
    width: 13rem;
}

.gallery-item__footer .gallery-item__footer-button img {
    height: 100%;
}

.gallery-item__footer .gallery-item__footer-button__legend {
    display: flex;
    flex-direction: column;
    gap: 0;
    font-size: 1.7rem;
    line-height: 1.2;
}

.gallery-item__footer .gallery-item__footer-button.right {
    justify-content: flex-end;
}

.gallery-item__footer .gallery-item__footer-button.right img {
    transform: rotate(180deg);
}

.gallery-item__footer
    .gallery-item__footer-button.right
    .gallery-item__footer-button__legend {
    text-align: right;
}

.gallery-item__footer .gallery-item__logo,
.gallery-item__footer .gallery-item__logo img {
    display: block;
    height: 100%;
    transition: transform 0.1s ease;
    transform: scale(1);
}

.gallery-item__footer .gallery-item__logo:hover {
    transform: scale(1.1);
}

/* ========================================
	Media queries
   ======================================== */
@media (max-width: 980px) {
	html {
		--font-size-base: 8px;
	}

	.home__new-art--link {
		padding-left: 33%;
	}

	.home__new-art--pictures a {
		width: auto;
	}
}

@media (max-width: 790px) {
	html {
		--font-size-base: 7px;
	}
	
	.home__new-art--link {
		--new-art-font-size: 3.8rem;
	}
}

@media (max-width: 670px) {
	html {
		--carousel-size: 60dvw;
	}

	.home__section {
		margin: 0 0 2rem;
	}

	.home__section--top {
		display: flex;
		flex-direction: column;
		gap: 2rem;
	}

	.home__new-art--link {
		justify-content: center;
		align-items: center;
		padding-left: 0;
	}

	.home__new-art--title {
		padding-bottom: 0;
	}

	.home__new-art--title .es,
	.home__new-art--title .en {
		text-shadow: none;
	}

	.home__new-art--link:hover {
		transform: none;
	}

	.home__new-art--link:hover .home__new-art--title .es {
		text-shadow: none;
	}

	.home__new-art--link:hover .home__new-art--title .en {
		text-shadow: none;
	}

	.home__section--middle {
		display: flex;
		flex-direction: column;
		margin-bottom: 4rem;
		gap: 2rem;
	}

	.home__comics {
		display: flex;
		flex-direction: column;
		transform: none;
		padding: 4rem 0;
	}

	.home__comics--title {
		writing-mode: horizontal-tb;
		transform: none;
	}

	.home__section--bottom {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		gap: 8rem;
		margin-bottom: 8rem;
	}

	.home__contact-link,
	.home__contact-link img {
		width: 60dvw;
		height: auto;
	}

	.home__social-media {
		border: 0.5rem solid var(--border-color);
		padding: 6rem 4rem;
	}

	.home__social-media li a {
		padding-left: 10rem;
		font-size: 4rem;
		color: var(--text-color-primary);
    	font-weight: 400;
		opacity: 1;
	}

	.home__gallery-link {
		height: auto;
		padding-bottom: 18rem;
		transform: scale(1.3);
	}

	.footer {
		height: calc(99vw / 7);
	}
}

@media (max-width: 480px) {
	html {
		--font-size-base: 6.5px;
	}

	.header__nav {
		height: auto;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		gap: 1rem;
		padding: 2rem 0;
	}
}

/* ========================================
   Utilities
   ======================================== */

.es {
    color: var(--text-color-primary);
}

.en {
    color: var(--text-color-secondary);
}

/* ========================================
   Markdown Content Classes
   ======================================== */

.md-title {
    text-align: center;
}

.md-right {
    text-align: right;
}

